chrome/skin/common/scrollbars.css
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

html:not(#main-window)[tabGroups_UUID][tabGroups_Version] scrollbar {
	/* -moz-appearance: none !important; */
	position: relative !important;
	background-color: transparent !important;
	background-image: none !important;
	z-index: 2147483647 !important;
	padding: 2px !important;
	border: none !important;
}

html:not(#main-window)[tabGroups_UUID][tabGroups_Version] scrollbar[orient="vertical"] {
	-moz-margin-start: calc(0px - var(--scrollbar-width)) !important;
	margin-bottom: 12px!important;
	min-width: var(--scrollbar-width) !important;
	max-width: var(--scrollbar-width) !important;
}

html:not(#main-window)[tabGroups_UUID][tabGroups_Version] scrollbar[orient="horizontal"] {
	margin-top: calc(0px - var(--scrollbar-width)) !important;
	min-height: var(--scrollbar-width) !important;
	max-height: var(--scrollbar-width) !important;
}

html:not(#main-window)[tabGroups_UUID][tabGroups_Version] scrollbar slider {
	/* -moz-appearance: none !important; */
}

html:not(#main-window)[tabGroups_UUID][tabGroups_Version] scrollbar thumb {
	/* -moz-appearance: none !important; */
	background-color: var(--hover-color) !important;
	border-width: 0px !important;
	border-radius: 3px !important;
}

html:not(#main-window)[tabGroups_UUID][tabGroups_Version] > scrollbar,
html:not(#main-window)[tabGroups_UUID][tabGroups_Version] scrollbar scrollbarbutton,
html:not(#main-window)[tabGroups_UUID][tabGroups_Version] scrollbar gripper {
	display: none !important;
}

/* This was `display: none !important;` but it was freezing the whole browser. No idea why so it has been substituted */
html:not(#main-window)[tabGroups_UUID][tabGroups_Version] .groupItem.thumbing * {
	scrollbar-width: none !important;
}

html:not(#main-window)[tabGroups_UUID][tabGroups_Version] body:not([lwtheme]):not([darktheme]) #groupSelector scrollbar thumb,
html:not(#main-window)[tabGroups_UUID][tabGroups_Version] body[lwtheme] #groupSelector[brighttext] scrollbar thumb {
	background-color: rgba(245,245,245,0.65) !important;
}

/* This is temp fix for overlay scrollbar not reappear on tabview*/
@media (-moz-overlay-scrollbars) {
	html:not(#main-window)[tabGroups_UUID][tabGroups_Version] scrollbar:not([active="true"]) {
		-moz-appearance: none;
	}
}

